// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser parses BETWEEN expression 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "quoted": false,
            "text": "age",
            "type": "identifier",
          },
          Object {
            "andKw": Object {
              "raw": "AND",
              "text": "AND",
              "tokenType": "AND",
              "type": "keyword",
            },
            "betweenKw": Object {
              "raw": "BETWEEN",
              "text": "BETWEEN",
              "tokenType": "BETWEEN",
              "type": "keyword",
            },
            "expr1": Array [
              Object {
                "text": "18",
                "type": "literal",
              },
            ],
            "expr2": Array [
              Object {
                "text": "63",
                "type": "literal",
              },
            ],
            "type": "between_predicate",
          },
        ],
        "nameKw": Object {
          "raw": "WHERE",
          "text": "WHERE",
          "tokenType": "RESERVED_CLAUSE",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "type": "statement",
  },
]
`;

exports[`Parser parses CASE expression 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "caseKw": Object {
              "raw": "CASE",
              "text": "CASE",
              "tokenType": "CASE",
              "type": "keyword",
            },
            "clauses": Array [
              Object {
                "condition": Array [
                  Object {
                    "text": "1",
                    "type": "literal",
                  },
                  Object {
                    "text": "+",
                    "type": "operator",
                  },
                  Object {
                    "text": "1",
                    "type": "literal",
                  },
                ],
                "result": Array [
                  Object {
                    "text": "10",
                    "type": "literal",
                  },
                ],
                "thenKw": Object {
                  "raw": "THEN",
                  "text": "THEN",
                  "tokenType": "THEN",
                  "type": "keyword",
                },
                "type": "case_when",
                "whenKw": Object {
                  "raw": "WHEN",
                  "text": "WHEN",
                  "tokenType": "WHEN",
                  "type": "keyword",
                },
              },
              Object {
                "elseKw": Object {
                  "raw": "ELSE",
                  "text": "ELSE",
                  "tokenType": "ELSE",
                  "type": "keyword",
                },
                "result": Array [
                  Object {
                    "text": "20",
                    "type": "literal",
                  },
                ],
                "type": "case_else",
              },
            ],
            "endKw": Object {
              "raw": "END",
              "text": "END",
              "tokenType": "END",
              "type": "keyword",
            },
            "expr": Array [
              Object {
                "quoted": false,
                "text": "foo",
                "type": "identifier",
              },
            ],
            "type": "case_expression",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": true,
    "type": "statement",
  },
]
`;

exports[`Parser parses LIMIT clause with count 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "count": Array [
          Object {
            "text": "15",
            "type": "literal",
          },
        ],
        "limitKw": Object {
          "raw": "LIMIT",
          "text": "LIMIT",
          "tokenType": "LIMIT",
          "type": "keyword",
        },
        "type": "limit_clause",
      },
    ],
    "hasSemicolon": true,
    "type": "statement",
  },
]
`;

exports[`Parser parses LIMIT clause with longer expressions 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "count": Array [
          Object {
            "text": "3",
            "type": "literal",
          },
          Object {
            "text": "*",
            "type": "operator",
          },
          Object {
            "text": "2",
            "type": "literal",
          },
        ],
        "limitKw": Object {
          "raw": "LIMIT",
          "text": "LIMIT",
          "tokenType": "LIMIT",
          "type": "keyword",
        },
        "offset": Array [
          Object {
            "text": "50",
            "type": "literal",
          },
          Object {
            "text": "+",
            "type": "operator",
          },
          Object {
            "text": "50",
            "type": "literal",
          },
        ],
        "type": "limit_clause",
      },
    ],
    "hasSemicolon": true,
    "type": "statement",
  },
]
`;

exports[`Parser parses LIMIT clause with offset and count 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "count": Array [
          Object {
            "text": "15",
            "type": "literal",
          },
        ],
        "limitKw": Object {
          "raw": "LIMIT",
          "text": "LIMIT",
          "tokenType": "LIMIT",
          "type": "keyword",
        },
        "offset": Array [
          Object {
            "text": "100",
            "type": "literal",
          },
        ],
        "type": "limit_clause",
      },
    ],
    "hasSemicolon": true,
    "type": "statement",
  },
]
`;

exports[`Parser parses SELECT * 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "type": "all_columns_asterisk",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "type": "statement",
  },
]
`;

exports[`Parser parses SELECT ident.* 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": Object {
              "quoted": false,
              "text": "ident",
              "type": "identifier",
            },
            "operator": ".",
            "property": Object {
              "type": "all_columns_asterisk",
            },
            "type": "property_access",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "type": "statement",
  },
]
`;

exports[`Parser parses array subscript 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "array": Object {
              "quoted": false,
              "text": "my_array",
              "type": "identifier",
            },
            "parenthesis": Object {
              "children": Array [
                Object {
                  "text": "5",
                  "type": "literal",
                },
              ],
              "closeParen": "]",
              "openParen": "[",
              "type": "parenthesis",
            },
            "type": "array_subscript",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "type": "statement",
  },
]
`;

exports[`Parser parses array subscript with comment 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "array": Object {
              "quoted": false,
              "text": "my_array",
              "trailingComments": Array [
                Object {
                  "precedingWhitespace": " ",
                  "text": "/*haha*/",
                  "type": "block_comment",
                },
              ],
              "type": "identifier",
            },
            "parenthesis": Object {
              "children": Array [
                Object {
                  "text": "5",
                  "type": "literal",
                },
              ],
              "closeParen": "]",
              "openParen": "[",
              "type": "parenthesis",
            },
            "type": "array_subscript",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "type": "statement",
  },
]
`;

exports[`Parser parses curly braces 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "quoted": false,
                "text": "foo",
                "type": "identifier",
              },
              Object {
                "text": ":",
                "type": "operator",
              },
              Object {
                "quoted": false,
                "text": "bar",
                "type": "identifier",
              },
            ],
            "closeParen": "}",
            "openParen": "{",
            "type": "parenthesis",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": true,
    "type": "statement",
  },
]
`;

exports[`Parser parses function call 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "nameKw": Object {
              "raw": "sqrt",
              "text": "SQRT",
              "tokenType": "RESERVED_FUNCTION_NAME",
              "type": "keyword",
            },
            "parenthesis": Object {
              "children": Array [
                Object {
                  "text": "2",
                  "type": "literal",
                },
              ],
              "closeParen": ")",
              "openParen": "(",
              "type": "parenthesis",
            },
            "type": "function_call",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "type": "statement",
  },
]
`;

exports[`Parser parses function name with and without parameters 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "quoted": false,
            "text": "CURRENT_TIME",
            "type": "identifier",
          },
          Object {
            "quoted": false,
            "text": "a",
            "type": "identifier",
          },
          Object {
            "type": "comma",
          },
          Object {
            "nameKw": Object {
              "raw": "CURRENT_TIME",
              "text": "CURRENT_TIME",
              "tokenType": "RESERVED_FUNCTION_NAME",
              "type": "keyword",
            },
            "parenthesis": Object {
              "children": Array [],
              "closeParen": ")",
              "openParen": "(",
              "type": "parenthesis",
            },
            "type": "function_call",
          },
          Object {
            "quoted": false,
            "text": "b",
            "type": "identifier",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": true,
    "type": "statement",
  },
]
`;

exports[`Parser parses list of statements 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "quoted": false,
        "text": "foo",
        "type": "identifier",
      },
    ],
    "hasSemicolon": true,
    "type": "statement",
  },
  Object {
    "children": Array [
      Object {
        "quoted": false,
        "text": "bar",
        "type": "identifier",
      },
    ],
    "hasSemicolon": false,
    "type": "statement",
  },
]
`;

exports[`Parser parses parenthesized expressions 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "quoted": false,
                "text": "birth_year",
                "type": "identifier",
              },
              Object {
                "text": "-",
                "type": "operator",
              },
              Object {
                "children": Array [
                  Object {
                    "quoted": false,
                    "text": "CURRENT_DATE",
                    "type": "identifier",
                  },
                  Object {
                    "text": "+",
                    "type": "operator",
                  },
                  Object {
                    "text": "1",
                    "type": "literal",
                  },
                ],
                "closeParen": ")",
                "openParen": "(",
                "type": "parenthesis",
              },
            ],
            "closeParen": ")",
            "openParen": "(",
            "type": "parenthesis",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "type": "statement",
  },
]
`;

exports[`Parser parses qualified.identifier.sequence 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": Object {
              "object": Object {
                "quoted": false,
                "text": "foo",
                "type": "identifier",
              },
              "operator": ".",
              "property": Object {
                "quoted": false,
                "text": "bar",
                "type": "identifier",
              },
              "type": "property_access",
            },
            "operator": ".",
            "property": Object {
              "quoted": false,
              "text": "baz",
              "type": "identifier",
            },
            "type": "property_access",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": true,
    "type": "statement",
  },
]
`;

exports[`Parser parses set operations 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "quoted": false,
            "text": "foo",
            "type": "identifier",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
      Object {
        "children": Array [
          Object {
            "quoted": false,
            "text": "bar",
            "type": "identifier",
          },
        ],
        "nameKw": Object {
          "raw": "FROM",
          "text": "FROM",
          "tokenType": "RESERVED_CLAUSE",
          "type": "keyword",
        },
        "type": "clause",
      },
      Object {
        "children": Array [],
        "nameKw": Object {
          "raw": "UNION ALL",
          "text": "UNION ALL",
          "tokenType": "RESERVED_SET_OPERATION",
          "type": "keyword",
        },
        "type": "set_operation",
      },
      Object {
        "children": Array [
          Object {
            "quoted": false,
            "text": "foo",
            "type": "identifier",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
      Object {
        "children": Array [
          Object {
            "quoted": false,
            "text": "baz",
            "type": "identifier",
          },
        ],
        "nameKw": Object {
          "raw": "FROM",
          "text": "FROM",
          "tokenType": "RESERVED_CLAUSE",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "type": "statement",
  },
]
`;

exports[`Parser parses square brackets 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "text": "1",
                "type": "literal",
              },
              Object {
                "type": "comma",
              },
              Object {
                "text": "2",
                "type": "literal",
              },
              Object {
                "type": "comma",
              },
              Object {
                "text": "3",
                "type": "literal",
              },
            ],
            "closeParen": "]",
            "openParen": "[",
            "type": "parenthesis",
          },
        ],
        "nameKw": Object {
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": true,
    "type": "statement",
  },
]
`;
